# databases-2025-yeahtube

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  compose.yml  pyproject.toml
.github/workflows/: build-and-test.yml
app/: alembic.ini  dependencies.py  main.py  populate.py  pytest.ini  schemas.py
app/alembic/: env.py
app/alembic/versions/: 068dfb6f7dcc_add_hashed_password_for_jwt_auth.py  298b5cad6f37_init.py  52c3a21e8954_cascade_paid_subs_and_videos.py  637eb2f37f94_delete_moderators_table.py  9102b6b4e0b3_add_indexes.py  abc1af6f4bc4_field_added_in_view_class.py  b2022158756e_add_paid_subscriptions_and_strikes.py  e55407c3fe66_add_admin_features.py  ec99b1075775_add_paid_subscriptions_and_strikes.py  ed806f6b6b47_add_is_deleted_field_for_soft_deletion.py  f22a9df9f9fd_merge_add_indexed_cascade_stuff.py
app/db/: models.py  session.py
app/repositories/: admin.py  auth.py  playlist.py  user.py  video.py
app/routers/: __init__.py  admin.py  auth.py  channel.py  playlist.py  user.py  video.py
app/schemas/: schemas.py
app/services/: admin.py  auth.py  playlist.py  user.py  video.py
app/utils/: auth.py  populate.py
docs/: CONTRIBUTIONS.md  queries.md  schema.md
tests/: conftest.py  test_admin.py  test_playlist.py  test_user.py  test_video.py
