[project]
name = "yeahtube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.124.4",
    "faker>=20.0.0",
    "psycopg2>=2.9.11",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.44",
]
